[gd_scene load_steps=20 format=3 uid="uid://028g6g8mstk8"]

[ext_resource type="Script" path="res://scripts/player/soldier.gd" id="1_f2pxo"]
[ext_resource type="Texture2D" uid="uid://bficc4gmrjb23" path="res://character/assets/soldiers/assault.png" id="1_onot7"]
[ext_resource type="Script" path="res://scripts/player/soldier_texture.gd" id="3_nwjla"]
[ext_resource type="Script" path="res://scripts/player/move.gd" id="4_i01e7"]
[ext_resource type="Script" path="res://scripts/enviroments/hitbox.gd" id="4_kc37j"]
[ext_resource type="PackedScene" uid="uid://da5db1xlhjbpn" path="res://scenes/combat/health_bar.tscn" id="4_orgnt"]
[ext_resource type="Script" path="res://scripts/player/attack.gd" id="6_l4fmc"]
[ext_resource type="PackedScene" uid="uid://daj8lkkmc4qgo" path="res://scenes/player/projectile/base_projectile.tscn" id="7_83w8t"]
[ext_resource type="AudioStream" uid="uid://k3h5d8bsbj3u" path="res://character/assets/sounds/ShootFx.MP3" id="9_ebmcl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kht88"]
size = Vector2(9, 8)

[sub_resource type="Animation" id="Animation_gnenw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u4j0y"]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [25, 26, 27]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_physics_process"
}]
}

[sub_resource type="Animation" id="Animation_epcpv"]
resource_name = "fire"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [15, 16]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("States/Attack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["fire"],
"method": &"spawn_projectile"
}]
}

[sub_resource type="Animation" id="Animation_7qkid"]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [20, 21, 22]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_physics_process"
}]
}

[sub_resource type="Animation" id="Animation_r8yjg"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_keabh"]
resource_name = "throw"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [30, 31, 32]
}

[sub_resource type="Animation" id="Animation_w27i7"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qu17b"]
_data = {
"RESET": SubResource("Animation_gnenw"),
"death": SubResource("Animation_u4j0y"),
"fire": SubResource("Animation_epcpv"),
"hit": SubResource("Animation_7qkid"),
"idle": SubResource("Animation_r8yjg"),
"throw": SubResource("Animation_keabh"),
"walk": SubResource("Animation_w27i7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q8kls"]
size = Vector2(11, 10)

[node name="Character" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 25
script = ExtResource("1_f2pxo")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_onot7")
hframes = 5
vframes = 7
script = ExtResource("3_nwjla")
parent = NodePath("..")
animation = NodePath("../AnimationPlayer")
projectile_spawner = NodePath("../Marker2D")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_kht88")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qu17b")
}

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 29
script = ExtResource("4_kc37j")
health = 20
texturePath = NodePath("../Texture")
healthBarPath = NodePath("../HealthBar")
moveStatePath = NodePath("../States/Move")
attackStatePath = NodePath("../States/Attack")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_q8kls")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 1)

[node name="PointLight2D" type="PointLight2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="PointLight2D"]

[node name="Camera2D" type="Camera2D" parent="."]
y_sort_enabled = true

[node name="HealthBar" parent="." instance=ExtResource("4_orgnt")]

[node name="States" type="Node" parent="."]

[node name="Move" type="Node" parent="States"]
script = ExtResource("4_i01e7")
walk_speed = 60
soldier = NodePath("../..")

[node name="Timer" type="Timer" parent="States/Move"]

[node name="Attack" type="Node" parent="States"]
script = ExtResource("6_l4fmc")
projectile_max_amount = 60
fire_projectile = ExtResource("7_83w8t")
texturePath = NodePath("../../Texture")
cameraPath = NodePath("../../Camera2D")
soldierPath = NodePath("../..")
projectileSpawnerPath = NodePath("../../Marker2D")

[node name="Timer" type="Timer" parent="States/Attack"]

[node name="FireFx" type="AudioStreamPlayer2D" parent="States/Attack"]
stream = ExtResource("9_ebmcl")

[connection signal="animation_finished" from="AnimationPlayer" to="Texture" method="on_animation_finished"]
[connection signal="area_entered" from="HitBox" to="HitBox" method="_on_area_entered" flags=18]
[connection signal="body_entered" from="HitBox" to="HitBox" method="_on_body_entered" flags=18]
[connection signal="timeout" from="States/Move/Timer" to="States/Move" method="_on_timer_timeout"]
[connection signal="timeout" from="States/Attack/Timer" to="States/Attack" method="_on_timer_timeout"]
